--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node api/server.js"
   },
   "dependencies": {
-    "json-server": "^0.17.4"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "json-server": "^0.17.4",
+    "mongoose": "^8.13.2"
   }
 }
