--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "json-server-vercel",
   "version": "1.0.0",
   "description": "Deploy JSON Server to Vercel",
-  "main": "api/server.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node api/server.js"
+    "start": "node api/index.js"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
