--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Deploy JSON Server to Vercel",
   "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js"
+    "dev": "vercel dev"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
