--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Deploy JSON Server to Vercel",
   "main": "api/index.js",
+  "type": "module",
   "scripts": {
     "dev": "vercel dev"
   },
