--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Deploy JSON Server to Vercel",
   "main": "api/index.js",
   "scripts": {
-    "dev": "vercel dev"
+    "dev": "node src/index.js"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "json-server": "^0.17.4",
     "mongoose": "^8.13.2"
   }
 }
